# turboserve

./: .clang-format  CMakeLists.txt  Containerfile  README.md  turboserve.conf
.github/workflows/: cifuzz.yml  container-images.yml
fuzz/corpus/: corpus-config-234910329  corpus-request-1012502954  corpus-request-1025202362  corpus-request-1036140795  corpus-request-1067854538  corpus-request-1102520059  corpus-request-1117142618  corpus-request-1129566413  corpus-request-1139901474  corpus-request-116087764  corpus-request-1186452551  corpus-request-1231192379  corpus-request-1239036029  corpus-request-1244316437  corpus-request-1264095060  corpus-request-1285228804  corpus-request-1335354340  corpus-request-1350573793  corpus-request-1365180540  corpus-request-1374344043  corpus-request-1376710097  corpus-request-137806862  corpus-request-1409959708  corpus-request-1424268980  corpus-request-1433925857  corpus-request-1450573622  corpus-request-1476153275  corpus-request-1494613810  corpus-request-1504569917  corpus-request-1548233367  corpus-request-159259470  corpus-request-1600028624  corpus-request-1605894428  corpus-request-1605908235  corpus-request-1626276121  corpus-request-1631518149  corpus-request-1649760492  corpus-request-1714636915  corpus-request-1726956429  corpus-request-1749698586  (+45 more)
fuzz/disabled/: README
fuzz/mayhem/: Dockerfile  build.sh
fuzz/regression/: README  clusterfuzz-testcase-minimized-request_fuzzer-5658117347475456
src/cmake/: TrySanitizer.cmake  turboserve-build-config.h.cmake  turboserve.pc.cmake
src/lib/: CMakeLists.txt  hash.c  int-to-str.c  int-to-str.h  liblwan.sym  missing-epoll.c  missing-pthread.c  missing.c  patterns.c  realpathat.c  ringbuffer.h  sd-daemon.c  timeout.c  turboserve-arena.c  turboserve-arena.h  turboserve-array.c  turboserve-array.h  turboserve-cache.c  turboserve-cache.h  turboserve-config.c  turboserve-config.h  turboserve-coro.c  turboserve-coro.h  turboserve-h2-huffman.c  turboserve-http-authorize.c  turboserve-http-authorize.h  turboserve-io-wrappers.c  turboserve-io-wrappers.h  turboserve-job.c  turboserve-lua.c  turboserve-lua.h  turboserve-mod-fastcgi.c  turboserve-mod-fastcgi.h  turboserve-mod-lua.c  turboserve-mod-lua.h  turboserve-mod-redirect.c  turboserve-mod-redirect.h  turboserve-mod-response.c  turboserve-mod-response.h  turboserve-mod-rewrite.c  (+27 more)
src/lib/missing/: assert.h  fcntl.h  ioprio.h  libproc.h  limits.h  pthread.h  pwd.h  stdio.h  stdlib.h  string.h  time.h  unistd.h
src/lib/missing/linux/: capability.h
src/lib/missing/sys/: epoll.h  ioctl.h  mman.h  sendfile.h  socket.h  syscall.h  types.h  vfs.h
src/samples/asyncawait/: CMakeLists.txt  main.c
src/samples/chatr/: CMakeLists.txt  main.c
src/samples/clock/: CMakeLists.txt  blocks.c  gifenc.c  gifenc.h  main.c  numbers.c  pong.c  pong.h  xdaliclock.c
src/samples/freegeoip/: CMakeLists.txt  freegeoip.c
src/samples/hello/: CMakeLists.txt  main.c
src/samples/hello-no-meta/: CMakeLists.txt  main.c
src/samples/pastebin/: CMakeLists.txt  main.c
src/samples/send-money-json-api/: CMakeLists.txt  main.c
src/samples/smolsite/: CMakeLists.txt  index.html  main.c
src/samples/techempower/: CMakeLists.txt  database.c  database.h  json.c  techempower.c  techempower.conf
src/samples/websocket/: CMakeLists.txt  index.html  main.c
src/scripts/: benchmark.py  gentables.py  testsuite.py
